admin-frontend/env/qa/set_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  template:
    spec:
      containers:
        - name: admin-frontend
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: service
                  operator: In
                  values:
                    - mopl-qa
      tolerations:
      - effect: "NoSchedule"
        key: "service"
        operator: "Equal"
        value: "mopl-qa"
