admin-frontend/env/qa/set_ing_annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-frontend-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: smartparking-qa
